# engai

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.config/: engai.toml
apps/eai/: Cargo.toml  build.rs
apps/eai/src/: config.rs  main.rs  prompt.rs  server.rs  state.rs
apps/eai/src/cli/: cmd_add.rs  cmd_config.rs  cmd_explain.rs  cmd_import.rs  cmd_note.rs  cmd_review.rs  cmd_stats.rs
apps/eai/src/db/: pool.rs
apps/eai/src/handlers/: notes.rs  phrases.rs  sync.rs
apps/eai/src/models/: phrase.rs  query.rs  word.rs
apps/engai/: Cargo.toml  build.rs
apps/engai/src/: ai.rs  config.rs  error.rs  server.rs  state.rs
apps/engai/src/cli/: cmd_config.rs  cmd_explain.rs  cmd_export.rs  cmd_read.rs  cmd_sync.rs
apps/engai/src/db/repositories/: example_repository.rs  reading_repository.rs  review_repository.rs
apps/engai/src/handlers/: chat.rs  phrases.rs  readings.rs  reviews.rs  stats.rs  words.rs
apps/engai/src/models/: chat.rs  mod.rs  query.rs  reading.rs  word.rs
apps/engai/src/services/: ai_service.rs  chat_service.rs  mod.rs  note_service.rs  review_service.rs  sync_service.rs  word_service.rs
apps/engai/static/: index.html
apps/engai/static/assets/: FamiliarityBadge-DNsJj-WZ.js  MarkdownRender-DKkIkrhh.js  api-client-5muyyKwJ.js  button-Dl3l7Pcb.js  card-BBxJtCy1.js  chat-CV6FLPa_.js  createLucideIcon-D9Kay8o_.js  index-Ba2ob9B5.css  index-BvNiaE5C.js  input-CkXaQbaK.js  link-Cdtxk6TP.js  react-dom-TCMuiRjp.js  readings-BJlThAek.js  review-CTTs4F-h.js  routes-D0t1HJcQ.js  scroll-area-gyqcAjD9.js  vocabulary-BSO0rK96.js  words._word-BeYRHibZ.js
crates/engai/: Cargo.toml  build.rs
crates/engai-core/: Cargo.toml
crates/engai-core/migrations/: 001_init.sql
crates/engai-core/src/: ai.rs  config.rs  db.rs  error.rs  lib.rs  markdown.rs  models.rs  prompt.rs  review.rs  sync.rs  sync_db_adapter.rs
crates/engai-core/src/db/: mod.rs  pool.rs
crates/engai-core/src/db/repositories/: chat_repository.rs  mod.rs  word_repository.rs
crates/engai-core/src/models/: example.rs  mod.rs  note.rs  phrase.rs  review.rs
crates/engai-core/src/services/: ai_service.rs  phrase_service.rs  reading_service.rs  stats_service.rs  sync_service.rs
crates/engai-core/tests/: test_config.rs  test_db.rs  test_integration.rs  test_markdown.rs  test_prompt.rs  test_review.rs  test_sync.rs
crates/engai/src/: cmd_add.rs  cmd_config.rs  cmd_explain.rs  cmd_export.rs  cmd_import.rs  cmd_note.rs  cmd_read.rs  cmd_review.rs  cmd_stats.rs  cmd_sync.rs  error.rs  main.rs  server.rs  state.rs
crates/engai/src/routes/: chat.rs  mod.rs  notes.rs  phrases.rs  readings.rs  reviews.rs  stats.rs  sync.rs  words.rs
crates/engai/src/tui/: app.rs  mod.rs  panel_chat.rs  panel_read.rs  panel_review.rs  panel_stats.rs  panel_vocab.rs  ui.rs
crates/esync/: Cargo.toml
crates/esync/src/: lib.rs  models.rs  sync.rs
crates/etui/: Cargo.toml
crates/etui/src/: lib.rs
crates/etui/src/api/: client.rs  mod.rs  models.rs
crates/etui/src/tui/: app.rs  event.rs  mod.rs  panel_chat.rs  panel_read.rs  panel_review.rs  panel_stats.rs  panel_vocab.rs  ui.rs
docs/superpowers/plans/: 2026-03-29-phase1-core-cli.md  2026-03-29-phase2-web-react.md  2026-03-30-phase3-tui-polish.md  2026-04-01-phase1-backend-layering.md  2026-04-01-phase2-extract-esync.md  2026-04-01-phase3-extract-etui.md  2026-04-01-phase4-workspace-reorg.md  2026-04-01-phase5-frontend-modernization.md  2026-04-02-model-config.md  2026-04-13-frontend-bun-migration.md  2026-04-14-playwright-e2e.md
docs/superpowers/specs/: 2026-03-29-engai-design.md  2026-04-01-zbooks-alignment-design.md  2026-04-02-model-config-design.md  2026-04-13-frontend-bun-migration-design.md  2026-04-14-playwright-e2e-design.md
frontend/src/: index.css  main.tsx
frontend/src/components/: FamiliarityBadge.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Reading.tsx  Vocabulary.tsx  WordCard.tsx
learning/01_vocab/: hello.md
prompts/: chat_english.md  explain_phrase.md  explain_word.md  reading_analyze.md
web/: .gitignore  build.ts  bunfig.toml  dev.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
web/app/: app.css  entry.tsx  root.tsx  router.tsx
web/app/routes/: _index.tsx  chat.tsx  readings.tsx  review.tsx  vocabulary.tsx  words.$word.tsx
web/e2e/flows/: chat.spec.ts  readings.spec.ts  review.spec.ts  vocabulary.spec.ts
web/e2e/smoke/: navigation.spec.ts  page-render.spec.ts
web/src/: App.tsx  main.tsx  routeTree.gen.ts
web/src/components/: FlashCard.tsx  Layout.tsx  MarkdownRender.tsx
web/src/lib/: api-client.ts
web/src/pages/: Chat.tsx  Dashboard.tsx  Reading.tsx  Review.tsx  Vocabulary.tsx  WordCard.tsx
web/src/routes/: __root.tsx  chat.tsx  index.tsx  readings.tsx  review.tsx  vocabulary.tsx  words.$word.tsx
web/src/stores/: sidebar-store.ts  theme-store.ts
(+22 files in other folders)
