[package]
name = "engai"
version = "0.1.0"
edition = "2021"

[features]
default = []
embed-static = ["rust-embed", "mime_guess"]

[[bin]]
name = "engai"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
toml = "0.8"
pulldown-cmark = "0.13"
gray_matter = "0.2"
dirs = "6"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
esync = { path = "../../crates/esync" }
etui = { path = "../../crates/etui" }
async-trait = "0.1"
clap = { version = "4.6.0", features = ["derive"] }
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = "0.5"
rust-embed = { version = "8.11.0", optional = true }
mime_guess = { version = "2", optional = true }
async-stream = "0.3"
ratatui = "0.30.0"
crossterm = "0.29"
textwrap = "0.16"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "macros"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 2
panic = "abort"
