[package]
name = "engai-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
toml = "0.8"
pulldown-cmark = "0.13"
gray_matter = "0.2"
dirs = "6"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "macros"] }
