[package]
name = "engai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engai"
path = "src/main.rs"

[dependencies]
engai-core = { path = "../engai-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.6.0", features = ["derive"] }
