[package]
name = "engai"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engai"
path = "src/main.rs"

[dependencies]
engai-core = { path = "../engai-core" }
esync = { path = "../esync" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.6.0", features = ["derive"] }
axum = { version = "0.8.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tower = "0.5"
rust-embed = "8.11.0"
mime_guess = "2"
futures = "0.3"
async-stream = "0.3"
uuid = { version = "1", features = ["v4"] }
ratatui = "0.30.0"
crossterm = "0.29"
textwrap = "0.16"
